@@ -1,3 +1,9 @@
+2008-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/spellcheck.c:
+   Update to Geany API 99 - use p_plugin->add_toolbar_item().
+
+
 2008-09-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/spellcheck.c:
